--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -1,5 +1,14 @@
 #app {
   font-size: 1.2em;
   text-align: center;
-  margin: 1em;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-width: 100vw;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1 0 auto;
 }
